--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <body>
+  <link rel="stylesheet" href="mystyle.css">
   <h1>Alex</h1>
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
