--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
+<!DOCTYPE html>
 <html>
-
+<head>
+<link rel="stylesheet" href="mystyle.css">
+</head>
 <body>
-  <link rel="stylesheet" href="mystyle.css">
-  <h1>Alex</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
 
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
 </html>
