Added js script

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="mystyle.css">
+    <script src="myscript.js"></script>
 </head>
 <body>
-
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
-<button type="button">Click Me!</button>
-
+<div>
+    <p class="name">freeCodeCamp</p>
+    <button onclick="changeColor()">Change to Blue</button>
+</div>
 </body>
 </html>
