--- a/index.html
+++ b/index.html
@@ -3,11 +3,34 @@
 <head>
     <link rel="stylesheet" href="mystyle.css">
     <script src="myscript.js"></script>
+    <title>Page Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<div>
-    <p class="name">freeCodeCamp</p>
-    <button onclick="changeColor()">Change to Blue</button>
+<div class="title">
+    <div class="header">
+        <h3>Alex Williams</h3>
+        <h2>Portfolio Website</h2>
+    </div>
+    <div class="topnav">
+        <a class="active">About</a>
+        <a>Released Games</a>
+        <a>Game Jams</a>
+        <a>Photoshop</a>
+        <a>Experimental / Tutorial Projects</a>
+    </div>
+    <div>
+        <h4>About</h4>
+        <p>
+            Welcome, I am a games developer with 3.5 years of software experience and 1.5 year in the games industry.
+
+            The purpose of this website is to showcase examples of my work in game development and animation. My
+            Facebook page, linked below, holds a selection of my artwork created over the last couple of years.
+        </p>
+        <hr class="rounded">
+    </div>
+
 </div>
 </body>
 </html>
