Finished about section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         </p>
         <hr class="rounded">
     </div>
+    <div>
+        <h4>Animation Showreel</h4>
+        <iframe src="https://www.youtube.com/embed/bMc4A_1KFUo?si=uV0kGyiiRMQR7m-6" allowfullscreen>
+        </iframe>
+    </div>
 
 </div>
 </body>
