--- a/index.html
+++ b/index.html
@@ -1,41 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
 <head>
-    <link rel="stylesheet" href="mystyle.css">
-    <script src="myscript.js"></script>
     <title>Page Title</title>
+    <link rel="stylesheet" href="mystyle.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<div class="title">
-    <div class="header">
-        <h3>Alex Williams</h3>
-        <h2>Portfolio Website</h2>
-    </div>
-    <div class="topnav">
-        <a class="active">About</a>
-        <a>Released Games</a>
-        <a>Game Jams</a>
-        <a>Photoshop</a>
-        <a>Experimental / Tutorial Projects</a>
+<div class="main">
+    <div id="navbar-container">
     </div>
     <div>
         <h4>About</h4>
         <p>
-            Welcome, I am a games developer with 3.5 years of software experience and 1.5 year in the games industry.
+            Welcome, I am a games developer with 3.5 years of software experience and 1.5 year in the games
+            industry.
 
             The purpose of this website is to showcase examples of my work in game development and animation. My
             Facebook page, linked below, holds a selection of my artwork created over the last couple of years.
         </p>
-        <hr class="rounded">
     </div>
+    <hr class="rounded">
     <div>
         <h4>Animation Showreel</h4>
         <iframe src="https://www.youtube.com/embed/bMc4A_1KFUo?si=uV0kGyiiRMQR7m-6" allowfullscreen>
         </iframe>
     </div>
-
 </div>
 </body>
 </html>
+<script src="createNavigationBar.js"></script>
