--- a/photoshop.html
+++ b/photoshop.html
@@ -7,15 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<div class="navigation">
-    <script src="createNavigationBar.js"></script>
+<div class="main">
+    <div id="navbar-container">
+    </div>
+    <div>
+        <h4>Photoshop Art</h4>
+        <p>
+            This is where examples of my artwork with photoshop are shown
+        </p>
+    </div>
+    <hr class="rounded">
 </div>
-<div>
-    <h4>Photoshop Art</h4>
-    <p>
-        This is where examples of my artwork with Photoshop are shown
-    </p>
-</div>
-<hr class="rounded">
 </body>
 </html>
+<script src="createNavigationBar.js"></script>
