Added photoshop page

--- a/photoshop.html
+++ b/photoshop.html
@@ -13,10 +13,39 @@
     <div>
         <h4>Photoshop Art</h4>
         <p>
-            This is where examples of my artwork with photoshop are shown
+            This is where examples of my artwork with photoshop are shown, these have been made using reference art
+            pieces.
         </p>
     </div>
     <hr class="rounded">
+    <div>
+        <h4>2D Art</h4>
+        <p>
+            I wanted to expand on my skills with photoshop for games so I decided to research 2D background art and
+            single pane images that could be used for title screens. After following some tutorials and finding some
+            images I wanted to see if I could recreate some of the artwork I'd seen during my research. These are the
+            results.
+        </p>
+        <div class="threePhoto">
+            <img src="Images/Photoshop/NightLake.png" alt="Images/ForestHeader.jpg">
+            <img src="Images/Photoshop/MoonForest.png" alt="Images/ForestHeader.jpg">
+            <img src="Images/Photoshop/RedMountain.png" alt="Images/ForestHeader.jpg">
+            <img src="Images/Photoshop/ThreeDHouse.png" alt="Images/ForestHeader.jpg">
+        </div>
+    </div>
+    <hr class="rounded">
+    <div>
+        <h4>VFX Textures</h4>
+        <p>
+            These textures were created for a fire VFX explosion in UE4, the black has been added to make the texture
+            more visible, normally they would be transparent.
+        </p>
+        <div class="threePhoto">
+            <img src="Images/Photoshop/Beam.jpg" alt="Images/ForestHeader.jpg">
+            <img src="Images/Photoshop/FireImpact2.jpg" alt="Images/ForestHeader.jpg">
+            <img src="Images/Photoshop/FireImpact3.jpg" alt="Images/ForestHeader.jpg">
+        </div>
+    </div>
 </div>
 </body>
 </html>
