--- a/index.html
+++ b/index.html
@@ -19,12 +19,17 @@
             The purpose of this website is to showcase examples of my work in game development and animation. My
             Facebook page, linked below, holds a selection of my artwork created over the last couple of years.
         </p>
-    </div>
-    <hr class="rounded">
-    <div>
-        <h4>Animation Showreel</h4>
-        <iframe src="https://www.youtube.com/embed/bMc4A_1KFUo?si=uV0kGyiiRMQR7m-6" allowfullscreen>
-        </iframe>
+        <div class="socials">
+            <a href="https://github.com/AJWilliams744">
+                <img src="Images/Socials/github.png" alt="Images/ForestHeader.jpg">
+            </a>
+            <a href="https://www.facebook.com/BrightSwipe">
+                <img src="Images/Socials/facebook.png" alt="Images/ForestHeader.jpg">
+            </a>
+            <a href="https://www.linkedin.com/in/ajwilliamsup">
+                <img src="Images/Socials/linkedin.png" alt="Images/ForestHeader.jpg">
+            </a>
+        </div>
     </div>
 </div>
 </body>
