Added about page

--- a/index.html
+++ b/index.html
@@ -13,12 +13,32 @@
     <div>
         <h4>About</h4>
         <p>
-            Welcome, I am a games developer with 3.5 years of software experience and 1.5 year in the games
-            industry.
+            I am focused on enhancing human-computer interfaces and creating seamless user experiences through
+            technology. With expertise in programming, 3D modeling, and effects, I’ve developed and released the game
+            "Duck Life 9," which received an 89% positive rating on Steam. My work at Wix Games has involved designing
+            and implementing complex gameplay elements, AI, and UI using Unity (C#), demonstrating my commitment to
+            developing intuitive and engaging applications. <br> <br>
 
-            The purpose of this website is to showcase examples of my work in game development and animation. My
-            Facebook page, linked below, holds a selection of my artwork created over the last couple of years.
+            In addition to my work in game development, I’ve contributed to software engineering projects at AIDA
+            Intelligent Solutions and Nikon Metrology, where I created and maintained C# applications and enhanced X-ray
+            software features. My industrial placement at OR3D allowed me to develop commercial 3D applications for VR
+            and stereoscopic viewing, working with major clients in the automotive and engineering industries. I hold a
+            BEng in Computer Science from York University and have continued to expand my skills through advanced
+            courses in 3D animation and VFX. I am eager to bring my experience and creativity to new challenges in the
+            tech world.
         </p>
+        <hr class="rounded">
+        <h4>Technical Skills</h4>
+        <div class="grid-container">
+            <div class="grid-item">3D</div>
+            <div class="grid-item">Blender, Unity, UE4, Maya (Animation), Phaser</div>
+            <div class="grid-item">Coding Languages</div>
+            <div class="grid-item">C#, Python, Visual Basic, C, C++, SQL, Typescript, HTML, CSS</div>
+            <div class="grid-item">2D</div>
+            <div class="grid-item">Photoshop, Audacity and Latex</div>
+            <div class="grid-item">Dev tools</div>
+            <div class="grid-item">Jira, Gitlab, Github, TeamCity, Upsource, Notion, Plastic SCM</div>
+        </div>
         <div class="socials">
             <a href="https://github.com/AJWilliams744">
                 <img src="Images/Socials/github.png" alt="Images/ForestHeader.jpg">
