--- a/ForgetfulInsomnia.html
+++ b/ForgetfulInsomnia.html
@@ -12,40 +12,31 @@
     </div>
     <div>
         <h4>Photoshop Art</h4>
-        <p>
-            This is where examples of my artwork with photoshop are shown, these have been made using reference art
-            pieces.
-        </p>
-    </div>
-    <hr class="rounded">
-    <div>
-        <h4>2D Art</h4>
-        <p>
-            I wanted to expand on my skills with photoshop for games so I decided to research 2D background art and
-            single pane images that could be used for title screens. After following some tutorials and finding some
-            images I wanted to see if I could recreate some of the artwork I'd seen during my research. These are the
-            results.
-        </p>
-        <div class="threePhoto">
-            <img src="Images/Photoshop/NightLake.png" alt="Images/ForestHeader.jpg">
-            <img src="Images/Photoshop/MoonForest.png" alt="Images/ForestHeader.jpg">
-            <img src="Images/Photoshop/RedMountain.png" alt="Images/ForestHeader.jpg">
-            <img src="Images/Photoshop/ThreeDHouse.png" alt="Images/ForestHeader.jpg">
+        <div id="duckStoreMain">
+            <iframe id="itch" src="https://itch.io/embed/554970?dark=true">
+            </iframe>
         </div>
     </div>
-    <hr class="rounded">
     <div>
-        <h4>VFX Textures</h4>
+        <h1>About</h1>
         <p>
-            These textures were created for a fire VFX explosion in UE4, the black has been added to make the texture
-            more visible, normally they would be transparent.
+            Forgetful Insomnia was created over a couple weeks of a game jam hosted by Grads in Games. We were given a
+            very basic project to work with that included and A* search algorithem, tile based grid generation,
+            character models, a few terrain objects and a main menu. Our task was to make a playable game using the
+            assets we were given using the Unity Engine. This game jam was a solo creation.
         </p>
         <div class="threePhoto">
-            <img src="Images/Photoshop/Beam.jpg" alt="Images/ForestHeader.jpg">
-            <img src="Images/Photoshop/FireImpact2.jpg" alt="Images/ForestHeader.jpg">
-            <img src="Images/Photoshop/FireImpact3.jpg" alt="Images/ForestHeader.jpg">
+            <iframe src="https://giphy.com/embed/SvWkdODwSPkEcvAmcW"></iframe>
+            <iframe src="https://giphy.com/embed/h1p1k5s92AG9Gz9aRO"></iframe>
         </div>
+        <iframe id="youtubeLink" src="https://www.youtube.com/embed/jx83SVaz_v0?si=h_VN1sDNywRwFmpG" allowfullscreen>
+        </iframe>
     </div>
+    <h1>Introduction</h1>
+    <p>
+        These textures were created for a fire VFX explosion in UE4, the black has been added to make the texture
+        more visible, normally they would be transparent.
+    </p>
 </div>
 </body>
 </html>
