--- a/ForgetfulInsomnia.html
+++ b/ForgetfulInsomnia.html
@@ -11,7 +11,7 @@
     <div id="navbar-container">
     </div>
     <div>
-        <h4>Forgetful Insomnia</h4>
+        <h4>Forgetful Insomnia (Unity)</h4>
         <div id="duckStoreMain">
             <iframe id="itch" src="https://itch.io/embed/554970?dark=true">
             </iframe>
