--- a/Wanderer.html
+++ b/Wanderer.html
@@ -11,7 +11,7 @@
     <div id="navbar-container">
     </div>
     <div>
-        <h4>Wanderer</h4>
+        <h4>Wanderer (Unity)</h4>
         <div id="duckStoreMain">
             <iframe id="itch" src="https://itch.io/embed/857706?dark=true">
             </iframe>
